--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -6,7 +6,7 @@
   = f.input :description, as: :text, input_html: { rows: 4, cols: 30 }
   = f.input :finish, as: :datetimepicker, label: 'Reminder'
   = f.input :status
-  = collection_select :sitename, :site_id, Site.all, :id, :name, {prompt: "Select Intrested site"}, {class: "form-control"}
+  = f.collection_select :site_id, Site.order(:name), :id, :name, {prompt: "Select Your Intrested Site"}, {class: "form-control"}
   = f.input :all_day, as: :boolean, label: 'Check to Close this Event'
 
   .modal-footer
