--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,5 +1,29 @@
 .row#event-calendar
   .col-md-10.col-md-offset-1#calendar
+- if current_user.role == "admin"
+  .row
+    .col-md-4.col-md-offset-4{:style => "color:black;"  }
+      %h1 
+        = link_to events_path, remote: false do
+          %button.btn.btn-success.btn-block
+            Completed Sites
+      - @allevents.each do |event|
+        - if event.all_day == true
+          %table.table.table-striped.table-hover
+            %thead
+              %tr
+                %th Site 
+                %th Name
+                %th Number
+            %tbody
+              %tr.success
+                %td 
+                  = event.site.name
+                %td 
+                  = event.name
+                %td 
+                  = event.phone
+            
 
 .row
   .modal.fade#event-modal(tabindex="-1" aria-labelledby="myModalLabel"
